<resources>
    <string name="app_name">Sem Result Calculator</string>
    <string name="enter_subject_name_and_marks">Enter subject name and marks</string>
    <string name="enter_subject_name">Enter subject name</string>
    <string name="enter_external_main_marks">Enter External/Main Marks</string>
    <string name="total_marks">Total Marks</string>
    <string name="subject1">Subject 1</string>
    <string name="subject2">Subject 2</string>
    <string name="enter_internal_marks">Enter Internal Marks</string>
    <string name="subject3">Subject 3</string>
    <string name="marks_secured">Marks Secured:</string>
    <string name="gpa">GPA</string>
    <string name="grade">Grade</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result:</string>
    <string name="out_of">Out of:</string>
    <string name="subject4">Subject 4</string>
    <string name="subject5">Subject 5</string>
    <string name="top_scoring_subject">Top scoring subject:</string>
    <string name="least_scoring_subject">Least Scoring Subject:</string>
</resources>