<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_subject_name_and_marks" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/subject1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_subject_name"
        android:inputType="textPersonName"

        android:minHeight="48dp"
        android:text="@string/subject1"/>

    <EditText
        android:id="@+id/sub1ext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject1"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_external_main_marks"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/sub1exttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:hint="@string/total_marks"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/sub1int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub1ext"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_internal_marks"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub1inttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub1exttotal"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:hint="@string/total_marks"
        android:inputType="number"
        android:minHeight="48dp" />


     <EditText
        android:importantForAutofill="no"
        android:id="@+id/subject2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub1inttotal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_subject_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/subject2" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub2ext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject2"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_external_main_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub2exttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:hint="@string/total_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub2int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub2ext"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_internal_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub2inttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub2exttotal"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:hint="@string/total_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/subject3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub2inttotal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_subject_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/subject3" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub3ext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject3"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_external_main_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub3exttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:hint="@string/total_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub3int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub3ext"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_internal_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub3inttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub3exttotal"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:hint="@string/total_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/subject4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub3inttotal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_subject_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/subject4" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub4ext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject4"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_external_main_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub4exttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:hint="@string/total_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub4int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub4ext"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_internal_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub4inttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub4exttotal"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:hint="@string/total_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/subject5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub4inttotal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_subject_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/subject5" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub5ext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject5"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_external_main_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub5exttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:hint="@string/total_marks"
        android:inputType="number"
        android:minHeight="48dp" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub5int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub5ext"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_internal_marks"
        android:inputType="number" />

     <EditText
        android:importantForAutofill="no"
        android:id="@+id/sub5inttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub5exttotal"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:hint="@string/total_marks"
        android:inputType="number" />

    <com.google.android.material.button.MaterialButton

        android:layout_margin="16dp"
        android:layout_below="@id/sub5int"
        android:layout_centerHorizontal="true"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_centerHorizontal="true"
        android:text="@string/result"
        android:id="@+id/resultheader"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultheader"
        android:layout_marginTop="12dp"
        android:layout_marginStart="36dp"
        android:id="@+id/gradeheader"
        android:text="@string/grade"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"/>

    <TextView
        android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gradeheader"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="36dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        tools:text="A+" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultheader"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:id="@+id/gpaheader"
        android:layout_alignParentEnd="true"
        android:text="@string/gpa"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="7.6"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="24dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/gpaheader"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:id="@+id/gpa"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grade"
        android:layout_margin="16dp"
        android:text="@string/marks_secured"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    <TextView
        android:id="@+id/marks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView2"
        android:layout_toEndOf="@id/textView2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        tools:text="480" />
    <TextView
        android:id="@+id/textView3"
        android:layout_below="@id/grade"
        android:layout_margin="16dp"
        android:layout_toEndOf="@id/marks"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out_of" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView3"
        android:layout_toEndOf="@id/textView3"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        tools:text="500" />


    <TextView
        android:id="@+id/tvheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_margin="16dp"

        android:text="@string/top_scoring_subject"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/topsub"
        android:textAllCaps="true"
        android:layout_toEndOf="@id/tvheading"
        android:layout_alignBottom="@id/tvheading"
        tools:text="Subject Name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
</RelativeLayout>
</ScrollView>